--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ Library/metadata/80/80a3616ca19596e4da0f10f14d241e9f
 Library/metadata/87/870353891bb340e2b2a9c8707e7419ba
 Library/metadata/b8/b8a0574e92bd43a59e19d6c3c6ae54c7
 Library/metadata/d9/d91035c548f23744c9bfb107348ed1c0
+*.asset
+Library/Collab/CollabSnapshot_6d7b26fe-0092-499c-aa3e-b61ba0ad443d.txt
+Library/metadata/00/00000000000000009000000000000000
+Library/EditorUserBuildSettings.asset
