--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ Library/metadata/d9/d91035c548f23744c9bfb107348ed1c0
 Library/Collab/CollabSnapshot_6d7b26fe-0092-499c-aa3e-b61ba0ad443d.txt
 Library/metadata/00/00000000000000009000000000000000
 Library/EditorUserBuildSettings.asset
+Library/assetDatabase3
+Library/CurrentLayout.dwlt
