TJ SPEED SPEEDY Boy
speed speedy boy

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,9 @@ Library/metadata/00/00000000000000009000000000000000
 Library/EditorUserBuildSettings.asset
 Library/assetDatabase3
 Library/CurrentLayout.dwlt
+Library/assetDatabase3
+Library/CurrentLayout.dwlt
+Library/shadercompiler-UnityShaderCompiler.exe0.log
+*.log
+Library/shadercompiler-UnityShaderCompiler.exe0.log
+*.log
